# doclint

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  doclint_architecture.md  mkdocs.yml  pyproject.toml  tmpclaude-0fa7-cwd
.claude/development_stages/: 00_overview.md  01_project_setup.md  02_core_module.md  03_parsers.md  04_embeddings.md  05_detectors.md  06_reporters.md  07_cli_interface.md  08_testing_infrastructure.md  09_documentation.md  10_ci_cd_deployment.md
doclint/: __init__.py  __main__.py  version.py
doclint/cache/: __init__.py  backends.py  manager.py  url_cache.py
doclint/cli/: __init__.py  main.py
doclint/core/: __init__.py  config.py  document.py  exceptions.py  scanner.py
doclint/detectors/: __init__.py  base.py  completeness.py  conflicts.py  llm_verifier.py  registry.py  vector_index.py
doclint/embeddings/: __init__.py  base.py  generator.py  processor.py
doclint/parsers/: __init__.py  base.py  docx.py  html.py  markdown.py  pdf.py  registry.py  text.py
doclint/reporters/: __init__.py  base.py  console.py  html.py  json_reporter.py  registry.py
doclint/utils/: __init__.py  hashing.py  text.py
docs/: index.md  llm-verification.md
tests/: __init__.py  conftest.py
tests/fixtures/html/: simple.html
tests/fixtures/markdown/: simple.md  with_frontmatter.md
tests/fixtures/text/: simple.txt
tests/test_cache/: test_backends.py  test_manager.py
tests/test_core/: __init__.py  test_config.py  test_document.py  test_scanner.py
tests/test_detectors/: __init__.py  test_completeness.py  test_conflicts.py  test_llm_verifier.py  test_registry.py  test_vector_index.py
tests/test_embeddings/: test_generator.py  test_processor.py
tests/test_integration/: __init__.py  test_detectors_pipeline.py
tests/test_parsers/: __init__.py  test_docx.py  test_html.py  test_integration.py  test_markdown.py  test_pdf.py  test_registry.py  test_text.py
tests/test_reporters/: __init__.py  test_console.py  test_html.py  test_json_reporter.py  test_registry.py
